# vcenter-mcp

./: .gitignore  README.md  app.py  config.env.example  manifest.yml  pyproject.toml  requirements.txt  runtime.txt  setup.py  setup_env.py  test_connection.py
main/: __init__.py  __main__.py  server_factory.py
main/config/: __init__.py  config_manager.py
main/controllers/: __init__.py  vcenter_controller.py
main/models/: __init__.py  vcenter_config.py
main/services/: __init__.py  vcenter_service.py
main/views/: __init__.py  mcp_tools.py
tests/: test_config.py  test_env_config.py  test_health_check.py  test_mvc_structure.py  test_server_factory.py
